[package]
name = "kindling"
version = "0.4.0"
edition = "2021"
description = "Kindle MOBI builder for dictionaries and books"

[[bin]]
name = "kindling-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
quick-xml = "0.36"
rayon = "1.10"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
